backend/src/main/java/com/test/extensionblock/error/ExtensionNameDuplicateException.java
package com.test.extensionblock.error;

public class ExtensionNameDuplicateException extends RuntimeException{
    public ExtensionNameDuplicateException(String message) {
        super(message);
    }
}
